spade-tests/src/snapshots/spade_tests__ast_lowering__tuple_type_specs_can_not_contain_ports_and_values.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity x(a: (int<32>, &int<32>)) -> bool __builtin__

error: Cannot mix ports and non-ports in a tuple
  ┌─ testinput:1:14
  │
1 │ entity x(a: (int<32>, &int<32>)) -> bool __builtin__
  │              ^^^^^^^  -------- This is a port
  │              │         
  │              This is not a port
  │
  = note: A tuple must either contain only ports or no ports


