spade-tests/src/snapshots/spade_tests__ast_lowering__types_are_not_returnable_values.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct test {}
fn main() -> bool {
    let x = test;
    true
}


error: Expected test to be a value
  ┌─ testinput:3:13
  │
1 │ struct test {}
  │ -------------- test is a struct
2 │ fn main() -> bool {
3 │     let x = test;
  │             ^^^^ Expected a value


