spade-tests/src/snapshots/spade_tests__ast_lowering__undefined_identifiers.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn main() -> bool {
    let a = test;
    true
}


error: Use of undeclared name test
  ┌─ testinput:2:13
  │
2 │     let a = test;
  │             ^^^^ Undeclared name


