spade-tests/src/snapshots/spade_tests__ast_lowering__undefined_label_error.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Undefined pipeline stage 'b'
  ┌─ testinput:7:15
  │
7 │         stage(b).x
  │               ^ Not a stage in this pipeline


