spade-tests/src/snapshots/spade_tests__ast_lowering__unused_attribute_errors_on_builtin_pipeline.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[uwu]
pipeline(1) a(clk: clock) -> bool __builtin__


error: Unrecognised attribute
  ┌─ testinput:1:1
  │
1 │ #[uwu]
  │ ^^^^^^ Unrecognised attribute


