spade-tests/src/snapshots/spade_tests__ast_lowering__use_of_nothing_is_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
use a::b;


error: Use of undeclared name a::b
  ┌─ testinput:1:5
  │
1 │ use a::b;
  │     ^^^^ Undeclared name


